--- a/index.html
+++ b/index.html
@@ -53,6 +53,75 @@
             </li>
           </ul>
         </address>
+
+        <button class="burger-btn" type="button">
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
+      </div>
+
+      <div class="mobile-menu">
+        <div class="container mobile-menu-container">
+          <button class="mobile-menu-close" type="button">
+            <svg class="mobile-menu-close-icon" width="8" height="8">
+              <use href="./images/icons/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <nav class="mobile-menu-nav">
+            <ul class="mobile-menu-nav-list">
+              <li><a class="mobile-menu-nav-link" href="">Studio</a></li>
+              <li><a class="mobile-menu-nav-link" href="">Portfolio</a></li>
+              <li><a class="mobile-menu-nav-link" href="">Contacts</a></li>
+            </ul>
+          </nav>
+          <address class="mobile-menu-address">
+            <ul class="mobile-menu-address-list">
+              <li>
+                <a class="mobile-menu-address-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li>
+                <a
+                  class="mobile-menu-address-link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="mobile-menu-socials-list">
+            <li>
+              <a class="mobile-menu-socials-link" href="">
+                <svg class="mobile-menu-socials-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="mobile-menu-socials-link" href="">
+                <svg class="mobile-menu-socials-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="mobile-menu-socials-link" href="">
+                <svg class="mobile-menu-socials-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="mobile-menu-socials-link" href="">
+                <svg class="mobile-menu-socials-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
@@ -60,7 +129,7 @@
       <section class="hero-section">
         <div class="container hero-container">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-section-btn">Order Service</button>
+          <button class="hero-section-btn" type="button">Order Service</button>
         </div>
       </section>
 
@@ -126,6 +195,10 @@
           <ul class="team-list">
             <li class="team-member">
               <img
+                srcset="
+                  ./images/our-team/mark-guerrero.jpg    1x,
+                  ./images/our-team/mark-guerrero@2x.jpg 2x
+                "
                 src="./images/our-team/mark-guerrero.jpg"
                 alt="Mark Guerrero Product Designer"
                 width="264"
@@ -176,6 +249,10 @@
             </li>
             <li class="team-member">
               <img
+                srcset="
+                  ./images/our-team/tom-ford.jpg    1x,
+                  ./images/our-team/tom-ford@2x.jpg 2x
+                "
                 src="./images/our-team/tom-ford.jpg"
                 alt="Tom Ford Frontend Developer"
                 width="264"
@@ -226,6 +303,10 @@
             </li>
             <li class="team-member">
               <img
+                srcset="
+                  ./images/our-team/camila-garcia.jpg    1x,
+                  ./images/our-team/camila-garcia@2x.jpg 2x
+                "
                 src="./images/our-team/camila-garcia.jpg"
                 alt="Camila Garcia Marketing"
                 width="264"
@@ -276,6 +357,10 @@
             </li>
             <li class="team-member">
               <img
+                srcset="
+                  ./images/our-team/daniel-wilson.jpg    1x,
+                  ./images/our-team/daniel-wilson@2x.jpg 2x
+                "
                 src="./images/our-team/daniel-wilson.jpg"
                 alt="Daniel Wilson UI Designer"
                 width="264"
@@ -334,12 +419,34 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="thumb">
-                <img
-                  src="./images/our-portfolio/banking-app.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/our-portfolio/banking-app-desktop.jpg    1x,
+                      ./images/our-portfolio/banking-app-desktop@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/our-portfolio/banking-app-tablet.jpg    1x,
+                      ./images/our-portfolio/banking-app-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/our-portfolio/banking-app-phone.jpg    1x,
+                      ./images/our-portfolio/banking-app-phone@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="portfolio-img"
+                    src="./images/our-portfolio/banking-app-phone.jpg"
+                    alt="Banking App"
+                  />
+                </picture>
                 <p class="thumb-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -353,12 +460,34 @@
             </li>
             <li class="portfolio-item">
               <div class="thumb">
-                <img
-                  src="./images/our-portfolio/cashless-payment.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/our-portfolio/cashless-payment-desktop.jpg    1x,
+                      ./images/our-portfolio/cashless-payment-desktop@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/our-portfolio/cashless-payment-tablet.jpg    1x,
+                      ./images/our-portfolio/cashless-payment-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/our-portfolio/cashless-payment-phone.jpg    1x,
+                      ./images/our-portfolio/cashless-payment-phone@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="portfolio-img"
+                    src="./images/our-portfolio/cashless-payment-phone.jpg"
+                    alt="Cashless Payment"
+                  />
+                </picture>
                 <p class="thumb-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -372,12 +501,34 @@
             </li>
             <li class="portfolio-item">
               <div class="thumb">
-                <img
-                  src="./images/our-portfolio/meditation-app.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/our-portfolio/meditation-app-desktop.jpg    1x,
+                      ./images/our-portfolio/meditation-app-desktop@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/our-portfolio/meditation-app-tablet.jpg    1x,
+                      ./images/our-portfolio/meditation-app-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/our-portfolio/meditation-app-phone.jpg    1x,
+                      ./images/our-portfolio/meditation-app-phone@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="portfolio-img"
+                    src="./images/our-portfolio/meditation-app-phone.jpg"
+                    alt="Meditation App"
+                  />
+                </picture>
                 <p class="thumb-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -391,12 +542,34 @@
             </li>
             <li class="portfolio-item">
               <div class="thumb">
-                <img
-                  src="./images/our-portfolio/taxi-service.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/our-portfolio/taxi-service-desktop.jpg    1x,
+                      ./images/our-portfolio/taxi-service-desktop@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/our-portfolio/taxi-service-tablet.jpg    1x,
+                      ./images/our-portfolio/taxi-service-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/our-portfolio/taxi-service-phone.jpg    1x,
+                      ./images/our-portfolio/taxi-service-phone@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="portfolio-img"
+                    src="./images/our-portfolio/taxi-service-phone.jpg"
+                    alt="Taxi Service"
+                  />
+                </picture>
                 <p class="thumb-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -410,12 +583,34 @@
             </li>
             <li class="portfolio-item">
               <div class="thumb">
-                <img
-                  src="./images/our-portfolio/screen-illustrations.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/our-portfolio/screen-illustrations-desktop.jpg    1x,
+                      ./images/our-portfolio/screen-illustrations-desktop@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/our-portfolio/screen-illustrations-tablet.jpg    1x,
+                      ./images/our-portfolio/screen-illustrations-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/our-portfolio/screen-illustrations-phone.jpg    1x,
+                      ./images/our-portfolio/screen-illustrations-phone@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="portfolio-img"
+                    src="./images/our-portfolio/screen-illustrations-phone.jpg"
+                    alt="Screen Illustrations"
+                  />
+                </picture>
                 <p class="thumb-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -429,12 +624,34 @@
             </li>
             <li class="portfolio-item">
               <div class="thumb">
-                <img
-                  src="./images/our-portfolio/online-courses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/our-portfolio/online-courses-desktop.jpg    1x,
+                      ./images/our-portfolio/online-courses-desktop@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/our-portfolio/online-courses-tablet.jpg    1x,
+                      ./images/our-portfolio/online-courses-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/our-portfolio/online-courses-phone.jpg    1x,
+                      ./images/our-portfolio/online-courses-phone@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="portfolio-img"
+                    src="./images/our-portfolio/online-courses-phone.jpg"
+                    alt="Online Courses"
+                  />
+                </picture>
                 <p class="thumb-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -454,7 +671,7 @@
     <footer class="page-bottom">
       <div class="container footer-container">
         <div class="footer-logo-container">
-          <a href="./index.html" class="logo-footer"
+          <a class="logo-footer" href="./index.html"
             >Web<span class="logo-footer-prefix">Studio</span></a
           >
           <p class="page-bottom-text">
@@ -518,7 +735,8 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+
+    <div class="backdrop hidden">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
