--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
       </div>
     </footer>
 
-    <div class="backdrop hidden">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
@@ -810,8 +810,10 @@
                   <use href="./images/icons/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a class="modal-link" href="">Privacy Policy</a>
+              <div class="policy-text-wrapper">
+                <p>I accept the terms and conditions of the</p>
+                <a class="modal-link" href="">Privacy Policy</a>
+              </div>
             </label>
           </div>
           <button class="form-btn">Send</button>
